Created attachment 36676 [details] Simple cairo_paint test case with RGB image Using cairo_paint with an image without an alpha channel is not always painted at the correct offset after successive expose events.
Bug present with xlib, not with xrender. Suggests the upload in-place path in cairo-xlib-surface.c path fails.
commit 1f84f5682c6ff246b3d28c75c8731504f31c1ee1 Author: Chris Wilson <chris@chris-wilson.co.uk> Date: Fri Jul 2 13:19:17 2010 +0100 xlib: Apply translation to image surface upload. Fixes: Bug 28888 - cairo_paint with rgb images does not work correctly https://bugs.freedesktop.org/show_bug.cgi?id=28888
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.